> COMMIT

# Created
- Custom NavLink Global Components

# Refactored
- Dashboard/index.tsx

# Imported

## TODO
- Clocking In and Out
- Wrong Password Error redirects to Register Form

## NOTES
- Email Availability Checker @ Form Stepper 1